Fix bugs and infinite call